# suniq

./: .gitignore  .travis.yml  Makefile.am  Makefile.in  README.md  config.h.in  configure.ac  counter.c  counter.h  hash.c  hash.h  makefile  suniq.c  test_hash.c
sample/: gen_data.py
src/: Makefile.am  hash.h
test/: Makefile.am  test_counter.c  test_hash.c
